# vektra-trader

./: .env.example  CLAUDE.md  README.md  pyproject.toml
agent/: brain.py  config.py  db.py  exchange.py  main.py  risk.py  teacher.py
dashboard/: README.md  package.json  pnpm-lock.yaml  proxy.ts
dashboard/app/: globals.css  layout.tsx  manifest.ts  page.tsx
dashboard/app/admin/: actions.ts  page.tsx
dashboard/app/admin/login/: page.tsx
dashboard/app/agenter/: page.tsx
dashboard/app/logg/: page.tsx
dashboard/components/admin/: AdminPanel.tsx
dashboard/components/agents/: AgentCard.tsx  ConfidenceMeter.tsx
dashboard/components/charts/: PnlChart.tsx  PortfolioDonut.tsx
dashboard/components/decisions/: DecisionCard.tsx
dashboard/components/money/: AssetBreakdown.tsx  StatTile.tsx
dashboard/components/ui/: Badge.tsx  Card.tsx  Nav.tsx  PeriodSelector.tsx  RealtimeRefresh.tsx  ServiceWorkerRegister.tsx
dashboard/lib/: auth.ts  format.ts  money.ts  risk-profiles.ts  types.ts
dashboard/lib/supabase/: browser.ts  server.ts
dashboard/public/: sw.js
deploy/: deploy.sh  vektra-trader-teacher.service  vektra-trader-teacher.timer  vektra-trader.service  vektra-trader.timer
docs/: DASHBOARD.md
prompts/: analytiker.md  laerer.md  risikosjef.md  strategi.md
supabase/: schema.sql
